Fixed @codacy issue